# operations-debs-contenttranslation-apertium-mk-en

./: ACKNOWLEDGEMENTS  AUTHORS  ChangeLog  Makefile.am  NEWS  README  apertium-mk-en.mk-en.alpha.dix  apertium-mk-en.mk-en.lex  apertium-mk-en.mk-en.lrx  apertium-mk-en.mk-en.rlx  apertium-mk-en.mk-en.t1x  apertium-mk-en.mk.acx  apertium-mk-en.mk.dix  apertium-mk-en.post-en.dix  apertium-mk-en_0.1.1~r57554.orig.tar.bz2.delta  apertium-mk-en_0.1.1~r57554.orig.tar.bz2.id  configure.ac  en-mk.prob  mk-en.prob  modes.xml  pending-tests.sh  prep-smoothing  wiki-tests.sh
debian/: changelog  control  copyright
dev/: HOURS  RULES-AND-MULTIWORDS  allstats  apertium-mk-en-hand-written.lrx  apertium-mk-en.mk-en.ldx  apertium-mk-en.mk-en.lrx  bilingual-summary.txt  categories  classified-personal-nouns  find-translation.sh  generation-summary.txt  generation-test.sh  ghetto-corpus-smoothing-diff  inconsistency.sh  missing-bidix-freq.sh  nouns  pers-nouns-mk-en  stats  testvoc-summary.txt  testvoc.sh  wikistats
dev/eval/: process-tests.sh  setimes.2010-09-18.mk-en.txt  wikipedia.2010-09-18.mk-en.txt
dev/gci/: xaa  xab  xac  xad  xae  xaf  xag  xah  xai  xaj  xak  xal  xam  xan  xao  xap  xaq  xar  xas
samples/: sample1.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt  sample6.txt
